# PRiSM

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  MANIFEST.in  Makefile  README.md  SETUP_LINUX.md  SETUP_MACOS.md  SETUP_WINDOWS.md  docker-compose.cpu.yml  docker-compose.yml  docker-run.sh  pyproject.toml  requirements.txt  run_hyperparameter_tuning.py  run_prism_parallel.py  run_prism_pipeline.py  setup.cfg  setup.py
.github/workflows/: lint.yml  publish.yml  test.yml  tests-quick.yml
data/processed/: imputed_dataset1_test.csv  imputed_dataset1_train.csv  imputed_dataset1_val.csv
data/raw/: SHA256SUMS.txt  htx_example.csv  htx_example_raw.csv
docs/: LATEX_TROUBLESHOOTING.md  PIPELINE_USAGE.md  README.md  README_DOCKER.md  SETUP_LINUX.md  SETUP_MACOS.md  SETUP_WINDOWS.md  VSCODE_REMOTE_DOCKER.md  mkdocs.yml
docs/docs/: README_copy.md  getting-started.md  index.md  reference.md
example_notebooks/: htx_example_variable_labels.csv  preprocessing.ipynb  prism_analysis.ipynb
example_notebooks/config/: README.md  example_batch.yaml  example_config.yaml  htx_example.yaml  htx_example_sparse.yaml
example_notebooks/modelling/: train_impact.ipynb  train_logreg.ipynb  train_mlp.ipynb  train_rf.ipynb  train_xgb.ipynb
models/: lasso_model_20240704_181616.pkl  lasso_model_20240704_181616_info.pkl  lasso_model_20240705_141214.pkl  mlp_model_20240704_180547.pth  mlp_model_20240705_135534.pth  mlp_model_20240705_135534_info.pkl  mlp_model_20240816_091428.pth  mlp_model_20240816_091428_info.pkl  nomogram_20240830_145532_bivariate.csv  nomogram_20240830_145532_univariate.csv  nomogram_20240830_1524_bivariate.csv  nomogram_20240830_1524_univariate.csv  nomogram_20240830_1542_bivariate.csv  nomogram_20240830_1542_univariate.csv  partial_responses_data_leb500.pkl  pr_cpu_lebesgue_20240816_170150.pkl  prn_model_20240704_181340.pth  prn_model_20240704_181340_info.pkl  prn_model_20240705_140928.pth
models/profiling_results/: lebesgue_profile_20240807_090409_samples500_cpu.txt  lebesgue_profile_20240807_091802_samples500_cpu.txt  lebesgue_profile_20240807_100128_samples500_cpu.txt  lebesgue_profile_comparison_20240807_092855_samples100_cpu.txt
notebooks/: .nbautoexport  2.0.5-hpi-lebesgue-dev.ipynb  2.01-hpi-nomogram-testing.ipynb  2.02-hpi-partialresponses-save.ipynb  2.03-hpi-partialresponses-dev.ipynb  2.04-hpi-nomogram-testing.ipynb  2.05-hpi-lasso-dev.ipynb  4.00-hpi-german-cc-example.ipynb  4.01-hpi-unos-example.ipynb  4.01-hpi-unos-modelling-full.ipynb  4.02-hpi-unos-modelling.full.ipynb  4.04-hpi-unos-full-leb-gpu.ipynb  4.05-hpi-unos-full-dir-cpu.ipynb  4.06-hpi-unos-full-leb-cpu.ipynb
notebooks/script/: 2.0.5-hpi-lebesgue-dev.py  2.01-hpi-nomogram-testing.py  2.01-hpi-partialresponses-dev.py  2.01-hpi-partialresponses-save.py  2.02-hpi-partialresponses-save.py  2.03-hpi-partialresponses-dev.py  2.04-hpi-nomogram-testing.py  2.05-hpi-lasso-dev.py  4.00-hpi-german-cc-example.py  4.00-hpi-german-cc-example_lebesgue.py  4.01-hpi-unos-example_dirac.py  4.01-hpi-unos-example_lebesgue.py  4.01-hpi-unos-modelling-full.py  4.02-hpi-unos-modelling-full.py  4.03-hpi-unos-modelling-full-gpu.py  4.04-hpi-unos-full-leb-gpu.py  (+1 more)
prism/: PRiSM_functions.py  __init__.py  _deprecation.py  config.py  config_loader.py  data_utilities.py  device_tools.py  feature_labels.py  impact.py  lasso.py  lasso_results.py  legacy.py  load_models.py  logging_config.py  logreg.py  maskedmlp.py  metrics.py  model_persistence.py  nomogram.py  nomogram_plot.py  notebook_utils.py  partial_responses.py  partial_responses_func.py  partial_responses_old.py  plotting_data.py  pr_save_test.py  preprocessing.py  prlasso.py  prnomogram_func.py  prplots_old.py  response_plot.py  save_all_figures.py  save_models.py  shapley_plots.py  wrapper.py
tests/: __init__.py  conftest.py  test_assign_column_masked.py  test_binary_feature_grouping.py  test_bivariate_categorical_detection.py  test_collapse_onehot_features.py  test_config_loader.py  test_data_utilities.py  test_device_tools.py  test_dirac_onehot_baseline.py  test_feature_labels.py  test_impact.py  test_integration_full_collapse_pipeline.py  test_integration_prism_pipeline.py  test_maskedmlp.py  test_nomogram_generator.py  test_onehot_acceptance.py  test_onehot_collapsed.py  test_onehot_subset.py  test_partial_responses.py  test_partial_responses_collapse.py  test_partial_responses_lebesgue.py  test_partial_responses_mathematical.py  test_partial_responses_reconstruction.py  test_partial_responses_subset.py  test_pipeline_runners.py  test_plotting_collapse.py  test_plotting_indexing.py  test_plotting_integration_new_arch.py  test_predict_proba_api.py  test_preprocessing.py  test_preprocessing_determinism.py  test_wrapper.py
(+74 files in other folders)
