[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "prism"
version = "0.0.1"
description = "PRiSM (Partial Responses in Structured Models) is a method designed to transform black-box classifiers into inherently interpretable models without compromising predictive performance. This repository provides user-friendly code to implement PRiSM models, making it accessible for non-experts in machine learning."
authors = [
  { name = "Henry Pigot" },
  { name = "Paulo Lisboa" },
  { name = "Johan Nilsson" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["prism"]
force_sort_within_sections = true
